<resources>
    <string name="app_name">course_work</string>
    <string name="todo">TODO</string>
    <string name="theatre">TextView</string>
    <string name="exibit">TextView</string>
    <string name="excursion">TextView</string>
    <string name="conference">TextView</string>
    <string name="videoconference">TextView</string>
    <string name="todo3">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo1">TODO</string>
    <string name="todo5">TODO</string>
    <string name="todo4">TODO</string>
    <string name="textview">TextView</string>
    <string name="textview2">TextView</string>
    <string name="textview3">TextView</string>
    <string name="textview4">TextView</string>
    <string name="textview5">TextView</string>
    <string name="todo6">TODO</string>
    <string name="todo7">TODO</string>
    <string name="todo8">TODO</string>
    <string name="todo9">TODO</string>
    <string name="todo10">TODO</string>
    <string name="exhibition">Выставки</string>
    <string name="theaters">Театры</string>
    <string name="video_conference">Видео-конференции</string>
    <string name="Conference">Конференции</string>
    <string name="Excursion">Экскурсии</string>
    <string name="places">Карта</string>
    <string name="favorites">Избранное</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="todo11">TODO</string>
    <string name="todo12">TODO</string>
    <string name="title">Title</string>
    <string name="todo20">TODO</string>
    <string name="excu">Экскурсии</string>
    <string name="ex1">Поезд «Магический экспресс» Расписание в НовосибирскеЖелезнодорожный вокзал</string>
    <string name="todo21">TODO</string>
    <string name="ex_1">Поезд «Магический экспресс»Железнодорожный вокзал</string>
    <string name="ex2">Поезд «Магический экспресс»Железнодорожный вокзал май-август</string>
    <string name="ex3">Романтический вечер на Оби Теплоход май-июнь</string>
    <string name="ex4">Шесть мостов Теплоход май,июнь</string>
    <string name="_54">Город 54 Теплоход май,июнь</string>
    <string name="ex5">Огни Новосибирска Теплоход май,июнь</string>
    <string name="todo22">TODO</string>
    <string name="todo23">TODO</string>
    <string name="todo24">TODO</string>
    <string name="todo25">TODO</string>
</resources>