<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Excursions">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="426dp"
                    android:layout_height="233dp"
                    android:layout_gravity="center"
                    android:autoLink="web"
                    android:clickable="true"
                    android:contentDescription="@string/todo21"
                    android:cursorVisible="true"
                    android:focusable="true"
                    android:linksClickable="true"
                    android:onClick="goToSo"
                    app:srcCompat="@drawable/s372x223"
                    tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="serif"
                    android:text="@string/ex2"
                    android:textColor="#2C3A2C"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/button6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#C7BAB9"
                    android:onClick="goToSu"
                    android:text="Посмотреть на карте" />

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="423dp"
                    android:layout_height="242dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/todo22"
                    android:cursorVisible="true"
                    android:focusable="true"
                    android:linksClickable="true"
                    android:onClick="goToSo1"
                    app:srcCompat="@drawable/s372x223__1_"
                    tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="serif"
                    android:text="@string/ex3"
                    android:textColor="#2C3A2C"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/button7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#C7BAB9"
                    android:onClick="goToSu1"
                    android:text="Посмотреть на карте" />

                <ImageView
                    android:id="@+id/imageView16"
                    android:layout_width="400dp"
                    android:layout_height="238dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/todo23"
                    app:srcCompat="@drawable/s372x223__2_"
                    android:cursorVisible="true"
                    android:focusable="true"
                    android:linksClickable="true"
                    android:onClick="goToSo2"
                    tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="402dp"
                    android:layout_height="31dp"
                    android:layout_gravity="center"
                    android:fontFamily="serif"
                    android:text="@string/ex4"
                    android:textColor="#2C3A2C"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/button8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#C7BAB9"
                    android:onClick="goToSu2"
                    android:text="Посмотреть на карте" />

                <ImageView
                    android:id="@+id/imageView17"
                    android:layout_width="420dp"
                    android:layout_height="234dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/todo25"
                    app:srcCompat="@drawable/s372x223__4_"
                    android:cursorVisible="true"
                    android:focusable="true"
                    android:linksClickable="true"
                    android:onClick="goToSo3"
                    tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="serif"
                    android:text="@string/_54"
                    android:textColor="#2C3A2C"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/button9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#C7BAB9"
                    android:onClick="goToSu3"
                    android:text="Посмотреть на карте" />

                <ImageView
                    android:id="@+id/imageView19"
                    android:layout_width="match_parent"
                    android:layout_height="236dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/todo24"
                    app:srcCompat="@drawable/s372x223__3_"
                    android:cursorVisible="true"
                    android:focusable="true"
                    android:linksClickable="true"
                    android:onClick="goToSo4"
                    tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="serif"
                    android:text="@string/ex5"
                    android:textColor="#2C3A2C"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/button10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#C7BAB9"
                    android:onClick="goToSu4"
                    android:text="Посмотреть на карте" />

                <Button
                    android:id="@+id/button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#C7BAB9"
                    android:text="Назад" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="408dp"
        android:layout_height="1459dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>