<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.gridlayout.widget.GridLayout

        android:id="@+id/gridLayout"
        android:layout_width="389dp"
        android:layout_height="688dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025">

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:contentDescription="@string/todo"
            android:paddingLeft="10dp"
            android:paddingTop="20dp"
            android:paddingRight="10dp"
            android:paddingBottom="20dp"
            app:layout_column="0"
            app:layout_row="0"
            app:srcCompat="@drawable/conference" />

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="197dp"
            android:layout_height="200dp"

            android:contentDescription="@string/todo"
            android:paddingLeft="40dp"
            android:paddingTop="20dp"
            android:paddingRight="40dp"
            android:paddingBottom="20dp"
            app:layout_column="1"
            app:layout_row="0"
            app:srcCompat="@drawable/excursion" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:includeFontPadding="false"
            android:text="@string/Conference"
            android:textColor="#2C3A2C"
            android:textSize="20sp"
            app:layout_column="0"
            app:layout_gravity="center"
            app:layout_row="1" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/Excursion"
            android:textColor="#2C3A2C"
            android:textSize="20sp"
            app:layout_column="1"
            app:layout_gravity="center"
            app:layout_row="1" />

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:contentDescription="@string/todo"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="20dp"
            app:layout_column="0"
            app:layout_row="2"
            app:srcCompat="@drawable/exhibition" />

        <ImageView
            android:id="@+id/imageView14"
            android:layout_width="197dp"
            android:layout_height="200dp"
            android:contentDescription="@string/todo"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="20dp"
            app:layout_column="1"
            app:layout_row="2"
            app:srcCompat="@drawable/theatre" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/exhibition"
            android:textColor="#2C3A2C"
            android:textSize="20sp"
            app:layout_column="0"
            app:layout_gravity="center"
            app:layout_row="3" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:paddingBottom="10dp"
            android:text="@string/theaters"
            android:textColor="#2C3A2C"
            android:textSize="20sp"
            app:layout_column="1"
            app:layout_gravity="center"
            app:layout_row="3" />

        <ImageView
            android:id="@+id/imageView15"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:contentDescription="@string/todo"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            app:layout_column="0"
            app:layout_columnSpan="2"
            app:layout_gravity="center"
            app:layout_row="4"
            app:srcCompat="@drawable/video_conference"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/video_conference"
            android:textColor="#2C3A2C"
            android:textSize="20sp"
            app:layout_column="0"
            app:layout_columnSpan="2"
            app:layout_gravity="center"
            app:layout_row="5" />

    </androidx.gridlayout.widget.GridLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="397dp"
        android:layout_height="47dp"
        android:background="#C7BAB9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.997">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="161dp"
            android:layout_height="35dp"
            android:layout_gravity="center|left"
            android:fontFamily="serif"
            android:paddingStart="50dp"
            android:paddingEnd="0dp"
            android:text="@string/places"
            android:textColor="#2C3A2C"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="serif"
            android:paddingStart="170dp"
            android:paddingEnd="0dp"
            android:text="@string/favorites"
            android:textColor="#2C3A2C"
            android:textSize="24sp" />

    </com.google.android.material.bottomnavigation.BottomNavigationView>
</androidx.constraintlayout.widget.ConstraintLayout>